feat: add cash and card checkout payments